# decoder_practice_

./: .gitignore  CMakeLists.txt  decoder_low_quality.sln  main.cpp
bench/: bench1.cpp
decoder_low_quality/: 1_b_3.jxs  Decoder.cpp  Decoder.h  Parser.cpp  Parser.h  bitstream.cpp  bitstream.h  decoder_low_quality.vcxproj  decoder_low_quality.vcxproj.filters  header.jxs  main.cpp  slice.jxs  type.h  types.h
unitTest/: CMakeLists.txt  tests.cpp
